Eliminate register spills

--- a/src/simulator/single_dev_expt/CMakeLists.txt
+++ b/src/simulator/single_dev_expt/CMakeLists.txt
@@ -5,3 +5,9 @@ add_library(single_dev_expt STATIC ${single_dev_expt_src})
 target_include_directories(single_dev_expt PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(single_dev_expt PUBLIC lbm_core blocking_core)
+
+target_compile_options(
+    single_dev_expt 
+    PRIVATE
+    $<$<COMPILE_LANGUAGE:CUDA>:-Xptxas=-v --keep -lineinfo>
+)
